--- a/overlay/packages/apps/Snap/res/values/cm_strings.xml
+++ b/overlay/packages/apps/Snap/res/values/cm_strings.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012 The Android Open Source Project
-                   2015 The CyanogenMod Project
+<!--
+     Copyright (C) 2013-2015 The CyanogenMod Project
+    
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+    
           http://www.apache.org/licenses/LICENSE-2.0
+    
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
--->
+--> 
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-<!-- Camera app resources that may need to be customized
-     for different hardware or product builds. -->
-<resources>
-    <!-- This value may be tweaked to save memory on low RAM devices. The value
-         is the percentage of camera preview height/width to scale to. -->
-    <integer name="panorama_frame_size_reduction">100</integer>
-
-    <!-- Force use a specific preview-size
-         Example: 1920x1080 -->
-    <string name="preview_size_for_photo">1920x1080</string>
+    <string name="pref_camera_scenemode_entry_sports">Burst</string>
+    <string name="pref_camera_scenemode_entry_steadyphoto">ClearShot</string>
 
 </resources>
