--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -31,7 +31,9 @@
          Must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLevels">
         <item>1</item>        <!-- pitch black -->
-        <item>11</item>       <!-- dark indoor -->
+        <item>5</item>
+        <item>9</item>
+        <item>14</item>
         <item>25</item>       <!-- twilight -->
         <item>50</item>       <!-- dim indoor -->
         <item>100</item>      <!-- home -->
@@ -40,8 +42,10 @@
         <item>500</item>      <!-- sunrise -->
         <item>750</item>
         <item>1000</item>     <!-- overcast -->
+        <item>2000</item>
         <item>5000</item>
         <item>10000</item>    <!-- daylight -->
+        <item>20000</item>
     </integer-array>
 
     <!-- Array of output values for LCD backlight corresponding to the LUX values
@@ -50,6 +54,8 @@
          This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLcdBacklightValues">
         <item>7</item>
+        <item>8</item>
+        <item>10</item>
         <item>12</item>
         <item>17</item>
         <item>29</item>
@@ -58,9 +64,11 @@
         <item>75</item>
         <item>114</item>
         <item>130</item>
-        <item>170</item>
-        <item>195</item>
-        <item>220</item>
+        <item>152</item>
+        <item>175</item>
+        <item>200</item>
+        <item>215</item>
+        <item>235</item>
         <item>255</item>
     </integer-array>
 
@@ -74,6 +82,15 @@
     <!-- Default screen brightness setting.
          Must be in the range specified by minimum and maximum. -->
     <integer name="config_screenBrightnessSettingDefault">53</integer>
+
+    <!-- Stability requirements in milliseconds for accepting a new brightness level.  This is used
+         for debouncing the light sensor.  Different constants are used to debounce the light sensor
+         when adapting to brighter or darker environments.  This parameter controls how quickly
+         brightness changes occur in response to an observed change in light level that exceeds the
+         hysteresis threshold. -->
+    <integer name="config_autoBrightnessBrighteningLightFastDebounce">1000</integer>
+    <integer name="config_autoBrightnessBrighteningLightDebounce">8000</integer>
+    <integer name="config_autoBrightnessDarkeningLightDebounce">10000</integer>
 
     <!-- Does the notification LED support multiple colors?
          Used to decide if the user can change the colors -->
